Changed the loading system for translation and configs